@@ -1,3 +1,7 @@
+2007-08-05  Badlop  <badlop@ono.com>
+
+	* src/mod_multicast.erl: Implement XEP33 limits: 1) read options.
+
 2007-08-04  Badlop  <badlop@ono.com>
 
 	* README.txt: Removed Changelog section.
